@@ -1,3 +1,7 @@
+2005-04-16  Christophe Fergeau  <teuf@gnome.org>
+
+	* freedesktop.org.xml.in: added mime type for 7-zip
+
 2005-04-16  Bastien Nocera  <hadess@hadess.net>
 
 	* freedesktop.org.xml: sync with freedesktop.org.xml.in content
